The_evil_man_called_wisyendra/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: banking-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: banking-app
  template:
    metadata:
      labels:
        app: banking-app
    spec:
      containers:
      - name: banking
        image: banking:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: accounts-vol
          mountPath: /app
          subPath: ""   
      volumes:
      - name: accounts-vol
        emptyDir: {}
