The_evil_man_called_wisyendra/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: banking-svc
spec:
  selector:
    app: banking-app
  type: NodePort
  ports:
  - name: http
    port: 8000
    targetPort: 8000
    nodePort: 30080
