The_evil_man_called_wisyendra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: banking-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: banking.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: banking-svc
            port:
              number: 8000
